syntax = "proto3";

package vega;
option go_package = "msg";

service Trading {
    rpc CreateOrder(Order) returns (OrderResponse);
}

enum Side { Buy = 0; Sell = 1; }

message OrderResponse {
    bool success = 1;
}

message Order {
    enum Type { GTC = 0; GTT = 1; ENE = 2; FOK = 3; }
    string id = 1;
    string market = 2;
    string party = 3;
    Side side = 4;
    uint64 price = 5;
    uint64 size = 6;
    uint64 remaining = 7;
    Type type = 8;
    uint64 timestamp = 9;
}

message OrderConfirmation {
    Order order = 1;
    repeated Trade trades = 2;
    repeated Order passiveOrdersAffected = 3;
}

enum OrderError {
    NONE = 0;
    INVALID_MARKET_ID = 1;
    ORDER_OUT_OF_SEQUENCE = 2;
    INVALID_REMAINING_SIZE = 3;
    NON_EMPTY_NEW_ORDER_ID = 4;
}

message Trade {
    string id = 1;
    string market = 2;
    uint64 price = 3;
    uint64 size = 4;
    string buyer = 5;
    string seller = 6;
    Side aggressor = 7;
    uint64 timestamp = 8;
}

message TradeSet {
    repeated Trade trades = 1;
}

message MarketData {
    uint64 bestBid = 1;
    uint64 bestOffer = 2;
    uint64 lastTradedPrice = 3;
}

message MarketDepth {
    uint64 buyOrderCount = 1;
    uint64 sellOrderCount = 2;
    uint64 buyOrderVolume = 3;
    uint64 sellOrderVolume = 4;
    uint64 buyPriceLevels = 5;
    uint64 sellPriceLevels = 6;
}

message Candle {
    string date = 1;
    uint64 high = 2;
    uint64 low = 3;
    uint64 open = 4;
    uint64 close = 5;
    uint64 volume = 6;
    uint64 openBlockNumber = 7;
    uint64 closeBlockNumber = 8;
}

message Candles {
    repeated Candle candles = 1;
}